# CPlusPlus

./: README.md
Rechner/: CMakeLists.txt
Rechner/app/: CalcApp.cpp
Rechner/lib/: Calc.cpp  Calc.hpp
Rechner/tests/: CalcTest.cpp  CalcTests.cpp
SiebenSegment/: CMakeLists.txt
SiebenSegment/app/: SevensegmentApp.cpp
SiebenSegment/lib/: Sevensegment.cpp  Sevensegment.hpp
SiebenSegment/tests/: SevensegmentTest.cpp  SevensegmentTests.cpp
Taschenrechner/: CMakeLists.txt
Taschenrechner/app/: PocketcalculatorApp.cpp
Taschenrechner/lib/: Calc.cpp  Calc.hpp  Pocketcalculator.cpp  Pocketcalculator.hpp  Sevensegment.cpp  Sevensegment.hpp
Taschenrechner/tests/: PocketcalculatorTest.cpp  PocketcalculatorTests.cpp
kwic/app/: main.cpp
kwic/lib/: Kwic.cpp  Kwic.hpp  Word.cpp  Word.hpp
kwic/test/: tests.cpp
